--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "budget-app",
   "version": "0.1.0",
-  "homepage": "https://02MINDMALEBANA.github.io/budgetProject/",
+  "homepage": "https://github.com/02MINDMALEBANA/budgetappProject.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
